Convert format errors responses to one template ver:1.0-beta
